tests/sksl/errors/DuplicateFunction.glsl
### Compilation failed:

error: 2: duplicate definition of 'void func()'
void func() {}
^^^^^^^^^^^
1 error
